--- a/Cuadernos de Trabajo/Cuadernos de Trabajo/2.-Introducción a Programación.ipynb
+++ b/Cuadernos de Trabajo/Cuadernos de Trabajo/2.-Introducción a Programación.ipynb
@@ -341,11 +341,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6b91ef2e-d2e0-4b02-8f26-0711925b0776",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "7*4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -359,11 +372,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9099f0a2-8c8a-43bb-89f7-1777ad5ffcad",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2**4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -377,11 +403,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "956eaff7-044d-4321-9117-9c79838fdfe9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.6"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "8/5"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -395,11 +434,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5bdd55d8-2a08-49b5-80bd-98c741b5b3a1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "20//6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8eb1842f-8964-483f-b4d0-ac66ba574b38",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "23//9"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -413,11 +486,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "06df6019-2880-42da-bc70-e8fe75b8085f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "26%8"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -431,11 +517,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e74bf267-cecf-4e6c-99ff-8e40b2aac32a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "123//32"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -449,11 +548,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "15f252d5-a478-49d9-b98e-01630d77d227",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.043478260869565216"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(1+1*(-1*2))/(2+7*(2+1))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -463,6 +575,48 @@
     "#### Por tu cuenta\n",
     "\n",
     "Evalua la expresión 3*(4-5) con y sin parentesis. Son los paréntesis redundantes?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0d1d161e-93a0-490c-9cd4-e2c1b3d8755a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-3"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3*(4-5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3f83cbdc-5238-4ce3-88ee-533044985bdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3*4-5"
    ]
   },
   {
@@ -477,7 +631,6 @@
    "cell_type": "markdown",
    "id": "fcbe6ca4-24fd-4150-b7bb-f870814b662e",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -504,19 +657,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "058c39e6-75ad-4a4a-b97c-44dc1d4bd4cc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "asdasd\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('asdasd')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "cd3ab393-c28b-4d4c-aac9-23ea0389ef07",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123  hola \n",
+      "salto de linea\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=123\n",
+    "print(a,' hola \\nsalto de linea')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -530,19 +705,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "8100353f-2679-469d-b979-46a710dac3a0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid character '“' (U+201C) (4261761828.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [25]\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(“Hoy aprenderé a usar la función print”)\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character '“' (U+201C)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(“Hoy aprenderé a usar la función print”)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "5ab0e8d1-7972-4f3e-b533-37f025a0a260",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hoy aprenderé a usar la función print\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Hoy aprenderé a usar la función print')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -563,11 +759,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "45a00297-3508-4bf3-aa5b-dff48ff9fe2d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid character '“' (U+201C) (2889473233.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [55]\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(“Hoy aprenderé a usar la función ‘print’”)\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character '“' (U+201C)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(“Hoy aprenderé a usar la función ‘print’”)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -945,7 +1152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
