--- a/Cuadernos de Trabajo/Cuadernos de Trabajo/2.-Introducción a Programación.ipynb
+++ b/Cuadernos de Trabajo/Cuadernos de Trabajo/2.-Introducción a Programación.ipynb
@@ -788,11 +788,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e0fdec45-8cb7-4be5-994c-87eef67685d9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hola mundo desde python xd\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('hola','mundo','desde python xd')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -816,35 +826,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fe21f618-e1aa-450a-a732-ac880a71eaba",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "esto es demasiado \"facil\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('esto es demasiado \"facil\"')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c6db0446-e2b8-4222-8607-613a16ff8329",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e478be1c-2a17-4323-9e34-48b79dd5bcbc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "91c9ef9e-e337-41ec-a9c8-e098680573b9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "por favor, es todo lo que tienes?\n",
+      "mejor me voy a mi curso de java...\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('por favor, es todo lo que tienes?\\nmejor me voy a mi curso de java...')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -860,19 +875,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "610e6493-a12e-4519-a32e-a79194139457",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "00c20559-ed84-49a3-a6d7-f9133036c938",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Aprender ‘Python’, es realmente “sencillo” too easy...\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Aprender ‘Python’, es realmente “sencillo” too easy...')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -886,27 +903,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a825385d-73b8-4468-8bd3-594a5d7d6abe",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c4bd2820-8dc7-4cdc-9cec-4b0f2040c59d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69bd8a7e-6cbf-4a54-97d0-defdae499b3f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'es un cadena pos que mas hiba a ser?'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arregloString = 'es un cadena pos que mas hiba a ser?'\n",
+    "arregloString"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -920,27 +935,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "6e2e6bd5-ccdc-4dad-9a3b-a98149839106",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "w=2\n",
+    "z=11\n",
+    "y=w**z"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "2a939657-8034-42dd-ab09-97046e3fcc19",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "212f99e9-b2d4-4f22-b12c-0690102154cb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2  a la potencia  11  resulta:  2048\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(w,' a la potencia ',z,' resulta: ',y)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -956,19 +977,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "371649c1-a963-41d4-8025-670791d36f73",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "tu vida o tu nombre prro? : lenin :(\n"
+     ]
+    }
+   ],
+   "source": [
+    "nombre = input('tu vida o tu nombre prro? :')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "cc70c163-f2cd-46e3-b49d-4dbe789155be",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "este es el nombre:  lenin :(\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('este es el nombre: ',nombre)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -988,27 +1029,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "cd0ea52b-96b1-4fcd-8be9-322e95a877aa",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "ingresa un numero o muere:  12\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = input('ingresa un numero o muere: ')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "ea6ada1e-490b-497a-927a-f338f9b424c9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "ingresa un numero o se muere tu gato:  5\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = input('ingresa un numero o se muere tu gato: ')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "2061bcfa-a08c-464d-a777-65cc0e455151",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sumando dos numeros en python:  125\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('sumando dos numeros en python: ',(x+y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "b1732ba7-6d85-480b-9b8d-0cca7ce68e4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "125 ???? pucha ni eso me sale bien :(\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((x+y),'???? pucha ni eso me sale bien :(')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1020,11 +1109,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "74947eed-8b26-4a2a-9c0e-567bd73988b7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "num:  1\n",
+      "num:  1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sumando dos numeros en python:  11\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = input('num: ')\n",
+    "y = input('num: ')\n",
+    "print('sumando dos numeros en python: ',(x+y))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1036,11 +1145,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "8dc93858-923a-41b8-b179-6025fd33878f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "num:  23\n",
+      "num:  1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sumando dos numeros en python:  24\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = input('num: ')\n",
+    "y = input('num: ')\n",
+    "print('sumando dos numeros en python: ',(int(x)+int(y)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1054,11 +1183,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "62e04f9b-7f4f-4a24-a17b-3a9210c6a8ce",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "ingresa un numero condecimales bro:  123.23\n",
+      "ingresale otro del mismo bro:  12.9\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aqui esta tu suma de flotantes bro:  136.13\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = input('ingresa un numero condecimales bro: ')\n",
+    "dd = input('ingresale otro del mismo bro: ')\n",
+    "print('aqui esta tu suma de flotantes bro: ',(float(d)+float(dd)))"
+   ]
   },
   {
    "cell_type": "code",
@@ -1088,7 +1237,6 @@
    "cell_type": "markdown",
    "id": "02620ade-789c-4784-a14b-47095b74f033",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -1116,16 +1264,46 @@
    "id": "3bffa3af-3dd7-4672-94d1-bbe18ae7247e",
    "metadata": {},
    "source": [
-    "Y que también, para cehcar si algo es igual, se usa =="
+    "Y que también, para checar si algo es igual, se usa =="
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "f452cf39-21cd-4b35-aa13-48b1604cc5d2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingresa tu edad y la de tu mejor amigo, para decirte la relación qué hay entre ellas \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa tu edad:  22\n",
+      "Ingresa la edad de tu mejor amigo:  45\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22  es diferente de 45 \n",
+      " Tu amigo y tú tienen edades diferentes.\n",
+      "22  es menor que 45 \n",
+      " Tu amigo es mayor que tú.\n",
+      "22  es menor o igual a 45 \n",
+      " Tu amigo tiene al menos, tu edad.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run ejemplo1_C2.py\n"
+   ]
   },
   {
    "cell_type": "markdown",
