--- a/Cuadernos de Trabajo/Cuadernos de Trabajo/7.-Arreglos con Numpy.ipynb
+++ b/Cuadernos de Trabajo/Cuadernos de Trabajo/7.-Arreglos con Numpy.ipynb
@@ -3917,21 +3917,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "id": "cf6c2851-8e01-4996-a057-c903645feb59",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Kevin       89\n",
+       "Patricia    70\n",
+       "Vanesa      68\n",
+       "Fernanda    59\n",
+       "Name: Mes 1, dtype: int64"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pe"
+    "peso.loc['Mes 1'].sort_values(ascending=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "65255a14-b79c-4ce5-81bc-1ce0e774d059",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
