--- a/Cuadernos de Trabajo/Cuadernos de Trabajo/7.-Arreglos con Numpy.ipynb
+++ b/Cuadernos de Trabajo/Cuadernos de Trabajo/7.-Arreglos con Numpy.ipynb
@@ -3943,7 +3943,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -3957,7 +3957,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.8 (main, Nov  1 2022, 14:18:21) [GCC 12.2.0]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+   }
   }
  },
  "nbformat": 4,
