--- a/Cuadernos de Trabajo/Cuadernos de Trabajo/8.-Cadenas.ipynb
+++ b/Cuadernos de Trabajo/Cuadernos de Trabajo/8.-Cadenas.ipynb
@@ -41,7 +41,7 @@
     {
      "data": {
       "text/plain": [
-       "'3.1416345324'"
+       "'3.142'"
       ]
      },
      "execution_count": 1,
@@ -50,7 +50,7 @@
     }
    ],
    "source": [
-    "f'{3.1416345324}'"
+    "f'{3.1416345324:0.3f}'"
    ]
   },
   {
@@ -63,11 +63,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "93f73be0-08a4-40e6-bd6a-9a2ccd15f2e0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'{3:d}'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,11 +92,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ee39ec1f-dd90-457c-bcd1-0f6aec52f7ef",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'@'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'{64:c}'#busca el caracter correspondiente en assci y lo devuelve"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,11 +121,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "174fb779-d902-4c17-a67a-13c768d26265",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'lenin hola 100'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'{\"lenin hola \":s}{100}'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -113,11 +152,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c30dd78d-a42f-4111-8c7e-9e40e8b6c402",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "':-)'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'{58:c}{45:c}{41:c}'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1508,7 +1560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
