--- a/Cuadernos de Trabajo/Cuadernos de Trabajo/reconocimiento_opencv.ipynb
+++ b/Cuadernos de Trabajo/Cuadernos de Trabajo/reconocimiento_opencv.ipynb
@@ -456,6 +456,7 @@
     }
    ],
    "source": [
+    "import cv2\n",
     "#face_cascade = cv2.CascadeClassifier('haarcascade_frontalface_default.xml')\n",
     "face_cascade = cv2.CascadeClassifier('cascade_funciona_mal.xml')\n",
     "#face_cascade = cv2.CascadeClassifier('cascade_joao.xml')\n",
