cambio modelo  ch

--- a/Cuadernos de Trabajo/Cuadernos de Trabajo/data_augmentation.ipynb
+++ b/Cuadernos de Trabajo/Cuadernos de Trabajo/data_augmentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "1214d19c-647d-4c61-a9a8-9ab4abd61c66",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "9db57c91-8947-4b4b-8d66-0ce2a21f969e",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "71dfe962-9200-4a7c-bd3e-c2f8837167c8",
    "metadata": {},
    "outputs": [
@@ -38,23 +38,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total img = 266\n"
+      "total img = 110\n"
      ]
     }
    ],
    "source": [
-    "DATADIR = '/home/lenin/Documents/GitHub/CursoPython/Cuadernos de Trabajo/Cuadernos de Trabajo'\n",
-    "CATEGORIES = ['n']\n",
+    "\n",
+    "PATH = '/home/lenin/Documents/proyecto_mineros/datasets/nuevo_data_38'\n",
+    "DIR = ['re']\n",
+    "OUT_PATH='/home/lenin/Documents/proyecto_mineros/datasets/nuevo_data_38/aum'\n",
     "\n",
     "c2=0\n",
-    "for category in CATEGORIES:\n",
-    "    path=os.path.join(DATADIR, category)\n",
+    "for category in DIR:\n",
+    "    path=os.path.join(PATH, category)\n",
     "    for img in os.listdir(path):\n",
     "        img_array=cv2.imread(os.path.join(path,img))\n",
     "        count=0\n",
-    "        while(count<3):\n",
+    "        while(count<10):\n",
     "            augmented_image = transform(image=img_array)[\"image\"]\n",
-    "            Datos='{}/no_chalecos/img_{}_{}.jpg'.format(DATADIR,count,c2)\n",
+    "            Datos='{}/img_{}_{}.jpg'.format(OUT_PATH,count,c2)\n",
     "            cv2.imwrite(Datos, augmented_image)\n",
     "            count+=1\n",
     "            c2+=1\n",
