termino reglin, avanzo deep learning

--- a/Cuadernos de Trabajo/Cuadernos de Trabajo/14.- Aprendizaje Profundo.ipynb
+++ b/Cuadernos de Trabajo/Cuadernos de Trabajo/14.- Aprendizaje Profundo.ipynb
@@ -29,21 +29,14 @@
    "execution_count": 2,
    "id": "bd902d6e-b4e4-4333-9504-4f9a972a8f76",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tensorflow'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_3579/2314089694.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import tensorflow "
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
+    "\n",
+    "\n",
+    "from tensorflow.keras.datasets import mnist"
    ]
   },
   {
@@ -56,11 +49,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8ef48c18-bd69-4955-b384-5cd5e9e7f05e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+      "11490434/11490434 [==============================] - 1s 0us/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "(xtrain,ytrain),(xtest,ytest) = mnist.load_data()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -80,11 +84,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "60113bf6-0316-41be-8f7a-73c83dada43b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(60000, 28, 28)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xtrain.shape"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,11 +113,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "86cabfda-faca-479f-8473-1996bad3c10e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(60000,)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ytrain.shape"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,11 +142,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "916ef597-192b-4b70-9ee1-ddc58e6863b2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 28, 28)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xtest.shape"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,131 +171,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "479392af-6df1-456d-b8ce-e6a50a2c6c79",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c643450f-2bc6-4f8f-a13a-bc3910e13c6c",
-   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000,)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Activa Matplotlib inline"
+    "ytest.shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c87d195-9e50-4f25-8d98-b9d93b62774e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "08035ef9-acb5-42fe-b5ea-5a0346cb48f6",
-   "metadata": {},
-   "source": [
-    "Importa matplotlib como plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24e071b8-2403-4225-a5a0-5ca3585a4cb0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ad511334-ab4e-496d-8bc9-9958a38018f6",
-   "metadata": {},
-   "source": [
-    "Importa Seaborn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "55d5f04b-ab0d-4d7a-bed1-6aa61c57eae1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "59d1e48b-4417-4a04-afa2-e3c41ed55fcb",
-   "metadata": {},
-   "source": [
-    "Pon su escala a 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "609e2364-6c72-4990-af16-935799ba66b9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "09f6ab82-af4c-44ff-bba4-afdc275ab1a8",
-   "metadata": {},
-   "source": [
-    "Importa Numpy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21911cc9-1236-440d-84b2-92539b6fa561",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ff06b5bf-fa97-4900-a818-768ddc84131b",
-   "metadata": {},
-   "source": [
-    "Ahora armate un programa que muestre 24 digitos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5cfe49de-bf24-4e66-8537-60da981c7132",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a26a18dd-e7de-4199-9a7a-cfad3aa7f4d8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a4c4fcce-6dff-453b-ae92-172e0668bafd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a180de8e-268c-4e90-94d0-59ae8fe87893",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -272,27 +208,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4eb4494e-12b3-4a0d-86a2-dfbee1853907",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "07fd91c2-c4f2-458f-a815-9de4b9b86250",
-   "metadata": {},
    "source": [
-    "Checa su shape"
+    "xtrain = xtrain.reshape((60000,28,28,1))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3853d775-bb30-4ca7-92ad-dc36d10dd117",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -304,27 +226,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "bae501d9-d1a3-4a9b-80ba-c3382c270443",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "260f8ff9-bda8-4a83-9dad-f23ce7b7a0d9",
-   "metadata": {},
    "source": [
-    "Checa su Shape"
+    "xtest = xtest.reshape((10000,28,28,1))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a8ad2896-9f03-4d85-867b-21857e138265",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -336,27 +244,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "b9b26a6c-ba06-4cd4-9814-ab43b7ad62ba",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "139fa20c-abd7-463f-b4dd-aedd354e0f35",
-   "metadata": {},
    "source": [
-    "Normaliza con astype Xtest"
+    "xtrain = xtrain.astype('float32')/255\n",
+    "xtest = xtest.astype('float32')/255"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e8c5e76f-29c7-4047-a6a9-b06304faaa88",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -368,11 +263,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "9a115845-b19b-4593-919e-2e19b91c7ad1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from tensorflow.keras.utils import to_categorical "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -384,11 +281,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "1a15cfc6-a827-4f10-9267-9f881029c18d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ytrain = to_categorical(ytrain)\n",
+    "ytest = to_categorical(ytest)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -400,11 +300,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6f06f02a-507c-44e0-a3f2-eb08868034e7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(60000, 10)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ytrain.shape"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -416,43 +329,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "810b786b-eafe-4b58-90ae-cdb782adb6bc",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a9ad08cf-1e68-4153-b4c8-2217cdc219c2",
-   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 1., 0., 0., 0., 0.], dtype=float32)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Aplica to_categorical a Y-test"
+    "ytrain[0]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "efcd16b6-1216-4ae3-85a3-7a702a18b459",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c8bbcaed-7500-418e-b59d-3e0e015b0429",
-   "metadata": {},
-   "source": [
-    "Checa su figura"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4ade61b0-e453-4395-95c9-9ec9840bc1a3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1547,7 +1441,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1561,7 +1455,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "1d352225c9fd865626f524f90127d68c796d3c92b986ba8ae09ad66b79047805"
+   }
   }
  },
  "nbformat": 4,
