--- a/Cuadernos de Trabajo/Cuadernos de Trabajo/14.- Aprendizaje Profundo.ipynb
+++ b/Cuadernos de Trabajo/Cuadernos de Trabajo/14.- Aprendizaje Profundo.ipynb
@@ -1959,6 +1959,16 @@
    "source": [
     "rnn.evaluate(xtest, ytest)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "3ca3cf54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rnn.save('rnn_imdb.h5')"
+   ]
   }
  ],
  "metadata": {
